Fix a lot of tags overflowing page horizontally

--- a/_assets/stylesheets/components/_post.scss
+++ b/_assets/stylesheets/components/_post.scss
@@ -22,7 +22,6 @@
 
   > span {
     margin-right: $medium-gap;
-    white-space: nowrap;
 
     &:before {
       @include fa-icon;
